# Agent-Lucy

./: .env.example  .gitignore  README.md  README.zh-TW.md  WEBAPP_COMPLETE.md  chat.py  chat_with_lucy.py  create_agent.py  main.py  pyproject.toml  recreate_agent.py  simple_chat.py  test_direct.py
docs/: github_mcp_test_report.md
src/agent_lucy/: __init__.py
tests/: test_github_comprehensive.sh
webapp/: .gitignore  Dockerfile  MCP_INTEGRATION.md  Makefile  README.md  requirements.txt  wrangler.toml
webapp/api/: main.py  main.py.backup
webapp/public/: index.html
